# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  spec.yaml
.github/workflows/: rust.yml
.sqlx/: query-596a50211449f2a09e22f188330880bedf0a88d1f5f91b536a16c145435f5b48.json
configuration/: base.yaml  production.yaml
ignoreDir/: DIGITALOCEANME.md  LOGREADME.md  SQLREADME.md
migrations/: 20240809044123_create_subscription_table.sql  20240911051445_make_status_not_null_in_subscriptions.sql  20240926045435_create_users_table.sql  20241104222850_create_newsletter_issues_table.sql
scripts/: clean_deps.sh  debug_env.sh  init_db.sh  init_redis.sh  new_subscriber.sh
scripts/migrations/: 20241025043021_seed_user.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirmation.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: README.md  health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirmation.rs
