[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
actix-web = "4"
reqwest = "0.12.5"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
