[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
config = "0.14.0"
chrono = {version = "0.4.38", default-features = false, features = ["clock"]}
uuid = {version = "1.10.0", features = ["v4"]}
actix-web = "4"
reqwest = "0.12.5"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0.204", features = ["derive"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-rustls", # “tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros", # “gives us access to sqlx::query! and sqlx::query_as!”
    "postgres", # “unlocks Postgres-specific functionality (e.g. non-standard SQL types)"
    "uuid", # “adds support for mapping SQL UUIDs to the Uuid type from the uuid crate”
    "chrono", # “adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate”
    "migrate" # “gives us access to the same functions used under the hood by sqlx-cli to manage migrations”
]

# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1", features = ["derive"]}
