[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.14.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
uuid = { version = "1.10.0", features = ["v4"] }
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Designed as a drop-in replacement of actix-web’s Logger, just based on tracing instead of log
tracing-actix-web = "0.7.11"# automatically adds a requestId in all calls
# We need the optional `derive` feature to use `serde`'s procedural macros:
# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
# The feature is not enabled by default to avoid pulling in
# unnecessary dependencies for projects that do not need it.
serde = { version = "1.0.204", features = ["derive"] }
# An extension trait to provide the `graphemes` method
# on `String` and `&str`
# an extension trait is a programming pattern in rust that allows you to add new methods to an existing type,
# even if you don't own or control that type's definition
unicode-segmentation = "1.11.0"
# Rand provides utilities to generate random numbers, to convert them to useful types and distributions,
# and some randomness-related algorithms
# We need the `std_rng` to get access to the PRNG we want
# we'll use crate for https://en.wikipedia.org/wiki/Cryptographically_secure_pseudorandom_number_generator
rand = { version = "0.8", features = ["std_rng"] }

validator = { version = "0.18.1", features = ["derive"] }
# environment variables are strings for the config crate,
# and it will fail to pick up integers if using the standard deserialization routine from serde.
# used to specify a custom deserialization function
serde-aux = "4.5.0"

# if you have a method that should only be called once, use this to inforce that
once_cell = "1.19.0"

# used as a wrapper to mark which fields are considered sensitive so that they are not logged
secrecy = { version = "0.8.0", features = ["serde"] }

# replace log with tracing for richer log messages
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
# tracing does not emit tracing events out of the box and does not provide a feature flag to enable this behaviour.
# If we want it, we need to explicitly register a logger implementation to
# redirect logs to our tracing subscriber for processing. thus this crate
tracing-log = "0.2.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.0"
default-features = false
features = [
    "runtime-tokio-rustls", # “tells sqlx to use the tokio runtime for its futures and rustls as TLS backend
    "macros", # “gives us access to sqlx::query! and sqlx::query_as!”
    "postgres", # “unlocks Postgres-specific functionality (e.g. non-standard SQL types)"
    "uuid", # “adds support for mapping SQL UUIDs to the Uuid type from the uuid crate”
    "chrono", # “adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate”
    "migrate" # “gives us access to the same functions used under the hood by sqlx-cli to manage migrations”
]

[dependencies.reqwest]
version = "0.12.7"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
linkify = "0.10.0"
wiremock = "0.6.2"
# fake provides generation logic for both primitive data types (integers, floats, strings) and
# higher-level objects (IP addresses, country codes, etc.) - in particular, emails!
fake = "2.9.2"
# for property based testing
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.61"
serde_urlencoded = "0.7.1"
# claims crate is used to get more informative error messages:
claims = "0.7.1"
